Implemented filtering with a button instead of timer.